force-app/main/default/objects/Income_Summary__c/Income_Summary__c.object-meta.xml
<CustomObject>
    <label>Income Summary</label>
    <nameField>
        <displayFormat>IS-{0000000}</displayFormat>
        <label>Income Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>