force-app/main/default/objects/Income_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Income Summaries</relationshipLabel>
    <relationshipName>Income_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>