force-app/main/default/objects/Income_Summary__c/fields/Disregard__c.field-meta.xml
<CustomField>
    <fullName>Disregard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disregard</label>
    <type>Checkbox</type>
</CustomField>