force-app/main/default/objects/Income_Summary__c/fields/In_AU__c.field-meta.xml
<CustomField>
    <fullName>In_AU__c</fullName>
    <label>In AU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>