force-app/main/default/objects/Income_Summary__c/fields/Is_income_deemed__c.field-meta.xml
<CustomField>
    <fullName>Is_income_deemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is income deemed</label>
    <type>Checkbox</type>
</CustomField>