force-app/main/default/objects/Income_Summary__c/fields/Title_Iv_E__c.field-meta.xml
<CustomField>
    <fullName>Title_Iv_E__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title -Iv E</label>
    <referenceTo>Title_Iv_E__c</referenceTo>
    <relationshipLabel>Income Summaries</relationshipLabel>
    <relationshipName>Income_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>